--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button class="btn" id="rock">Rock</button>
+    <button class="btn" id="paper">Paper</button>
+    <button class="btn" id="scissors">Scissors</button>
     <script src="console.js"></script>
 </body>
 </html>
