--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -7,33 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="console.js" defer></script>
 </head>
 
 <body>
     <div id="container">
         <div id="scoresContainer">
-            <h1>RPS</h1>
+            <h1>Rock Paper Scissors</h1>
             <div id="scoreBoxContainer">
-                <div id="scoreBoxPlayer" class="scoreBox"><h2>Player</h2><br>
-                    <h1><p id="playerScore"></p></h1>
-                    <p id="playerSelection" class="selectionBox">?</p>
+                <div id="scoreBoxPlayer">
+                    <h2>Player</h2>
+                    <h1><span id="playerScore">0</span></h1>
+                    <p id="playerSelection">?</p>
                 </div>
-                <div id="scoreBoxComputer" class="scoreBox"><h2>Computer</h2><br>
-                    <h1><p id="computerScore"></p></h1>
-                    <p id="computerSelection" class="selectionBox">?</p>
+                <div id="scoreBoxComputer">
+                    <h2> Computer</h2>
+                    <h1><span id="computerScore">0</span></h1>
+                    <p id="computerSelection">?</p>
                 </div>
             </div>
             <div id="selections">
             </div>
-            <p id="lastResult">No round played yet, ready!</p>
+            <p id="lastResult">Choose your first move!</p>
         </div>
         <div id="buttonsContainer">
-            <div><button class="buttons playBtn" id="rock"><img src="img/rock.png" class="buttonImg"></button></div>
-            <div><button class="buttons playBtn" id="paper"><img src="img/paper.png" class="buttonImg"></button></div>
-            <div><button class="buttons playBtn" id="scissors"><img src="img/scissors.png" class="buttonImg"></button>
+            <div><button class="playBtn" id="rock"></button></div>
+            <div><button class="playBtn" id="paper"></button></div>
+            <div><button class="playBtn" id="scissors"></button>
             </div>
-            <div><button class="buttons reset" id="reset">Reset</button></div>
+            <div><button class="resetBtn" id="reset">Reset</button></div>
         </div>
     </div>
 </body>
