--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="console.js" defer></script>
 </head>
 
@@ -29,7 +29,7 @@
             </div>
             <div id="selections">
             </div>
-            <p id="lastResult">Choose your first move!</p>
+            <p id="lastResult">First to score 5 points wins. Choose your first move!</p>
         </div>
         <div id="buttonsContainer">
             <div><button class="playBtn" id="rock"></button></div>
